--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,54 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="256"
+    android:viewportHeight="256">
+  <path
+      android:pathData="M161.51,119.81m-54.54,0a54.54,54.54 45,1 1,109.07 0a54.54,54.54 135,1 1,-109.07 0"
+      android:strokeLineJoin="miter"
+      android:strokeWidth="2.81"
+      android:fillColor="#F9C100"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="butt"/>
+  <path
+      android:pathData="M161.51,51.22c-1.57,0 -2.84,-1.27 -2.84,-2.84l0,-18.51c0,-1.57 1.27,-2.84 2.84,-2.84s2.84,1.27 2.84,2.84l0,18.51C164.35,49.94 163.08,51.22 161.51,51.22z"
+      android:strokeLineJoin="miter"
+      android:strokeWidth="2.81"
+      android:fillColor="#F9C100"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="butt"/>
+  <path
+      android:pathData="M251.47,122.66l-18.51,0c-1.57,0 -2.84,-1.27 -2.84,-2.84c0,-1.57 1.27,-2.84 2.84,-2.84l18.51,0c1.57,0 2.84,1.27 2.84,2.84C254.31,121.39 253.04,122.66 251.47,122.66z"
+      android:strokeLineJoin="miter"
+      android:strokeWidth="2.81"
+      android:fillColor="#F9C100"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="butt"/>
+  <path
+      android:pathData="M110.99,72.14c-0.73,0 -1.45,-0.28 -2.01,-0.83l-13.09,-13.09c-1.11,-1.11 -1.11,-2.91 0,-4.02s2.91,-1.11 4.02,0l13.09,13.09c1.11,1.11 1.11,2.91 0,4.02C112.45,71.87 111.72,72.14 110.99,72.14z"
+      android:strokeLineJoin="miter"
+      android:strokeWidth="2.81"
+      android:fillColor="#F9C100"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="butt"/>
+  <path
+      android:pathData="M212.03,72.14c-0.73,0 -1.45,-0.28 -2.01,-0.83c-1.11,-1.11 -1.11,-2.91 0,-4.02l13.09,-13.09c1.11,-1.11 2.91,-1.11 4.02,0c1.11,1.11 1.11,2.91 0,4.02l-13.09,13.09C213.48,71.87 212.76,72.14 212.03,72.14z"
+      android:strokeLineJoin="miter"
+      android:strokeWidth="2.81"
+      android:fillColor="#F9C100"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="butt"/>
+  <path
+      android:pathData="M26.29,158.17c-0.09,-1.35 -0.15,-2.7 -0.15,-4.07c0,-33.39 27.07,-60.45 60.45,-60.45c24.15,0 44.99,14.17 54.67,34.64c7.29,-5.18 16.18,-8.25 25.81,-8.25c22.27,0 40.67,16.31 44.06,37.63c15.33,4.2 26.62,18.19 26.62,34.85c0,19.98 -16.19,36.17 -36.17,36.17L37.58,228.69C17.6,228.69 1.41,212.49 1.41,192.52C1.41,176.49 11.85,162.91 26.29,158.17z"
+      android:strokeLineJoin="miter"
+      android:strokeWidth="2.81"
+      android:fillColor="#62C3F7"
+      android:fillType="nonZero"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="butt"/>
 </vector>
